src/objects/Project_Member__c.object
<CustomObject>
    <description>For internal projects -  to add project members to a project</description>
    <fields>
        <fullName>Country_Location__c</fullName>
        <description>The country the member belongs to</description>
        <inlineHelpText>The country the member belongs to</inlineHelpText>
        <label>Country Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the country object (interbnal object to keep track of the countries live in SFDC</description>
        <inlineHelpText>Find the country to which the member belongs</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Project Members</relationshipLabel>
        <relationshipName>Project_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if member is not a Denstply Sirona Empoyee</inlineHelpText>
        <label>External Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Place to add any specific notes about the project member - e.g. his/her role in the project and/or company</description>
        <inlineHelpText>Add any specific notes about the project member - e.g. his/her role in the project and/or company</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add the member of the project (full SFDC license)</description>
        <inlineHelpText>Add the member of the project (full SFDC license)</inlineHelpText>
        <label>Project Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <description>The user&apos;s role in the project</description>
        <inlineHelpText>The user&apos;s role in the project</inlineHelpText>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Data Manager</fullName>
                </value>
                <value>
                    <fullName>Deployment Manager</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Global Sponsor</fullName>
                </value>
                <value>
                    <fullName>Knowledge Manager</fullName>
                </value>
                <value>
                    <fullName>Local Sponsor</fullName>
                </value>
                <value>
                    <fullName>Project Member</fullName>
                </value>
                <value>
                    <fullName>Project Owner (budget)</fullName>
                </value>
                <value>
                    <fullName>Stakeholder/business user</fullName>
                </value>
                <value>
                    <fullName>Steer-Co</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <inlineHelpText>Add the project to which the member belongs</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Members</relationshipLabel>
        <relationshipName>Project_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_allocated_per_week__c</fullName>
        <description>Enter amount of hours allocated by the project member to this project.</description>
        <inlineHelpText>Enter amount of hours allocated by the project member to this project.</inlineHelpText>
        <label>Time allocated per week</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add Project Member who isn&apos;t an SFDC user or has a Chatter Free user license</description>
        <inlineHelpText>Add Project Member who isn&apos;t an SFDC user or has a Chatter Free user license</inlineHelpText>
        <label>Non-SFDC Project Member</label>
        <referenceTo>User_Role__c</referenceTo>
        <relationshipLabel>Project Members</relationshipLabel>
        <relationshipName>Project_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Member</label>
    <nameField>
        <label>Project Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>